# template

./: .coveragerc  .gitlab-ci.yml  .pre-commit-config.yaml  archan.yml  pyproject.toml  requirements.txt  setup.cfg
config/: archan.yml
my_package/: main.py
my_package/action/: Action.py  Aeration.py  Alarm.py  GasInjection.py  Ventilation.py
my_package/cfg/: GsConfig.py
my_package/encoderstrategy/: AerationEncoder.py  AlarmEncoder.py  EncoderStrategy.py  GasInjectionEncoder.py  VentilationEncoder.py
my_package/socketgs/: InputSocket.py  OutputSocket.py
my_package/topic/: CommandTopic.py  InputStreamTopic.py  Topic.py
