[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#[build-system]
#requires = ["setuptools>=42"]
#build-backend = "setuptools.build_meta"


[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Sébastien Eustace <sebastien@eustace.io>"]

[tool.poetry.dependencies]
python = "^3.6"

flake8 = ">=3.7,<5"
typing_extensions = ">=3.6,<5.0"

flake8-commas = "^2.0"
flake8-quotes = "^3.0"
flake8-comprehensions = "^3.1"
flake8-docstrings = "^1.3"
flake8-string-format = "^0.3"
flake8-bugbear = ">=20.1,<23.0"
flake8-debugger = "^4.0"
flake8-isort = "^4.0"
flake8-eradicate = "^1.0"
flake8-bandit = ">=2.1,<4"
flake8-broken-line = ">=0.3,<0.5"
flake8-rst-docstrings = "^0.2"
pep8-naming = ">=0.11,<0.13"
darglint = "^1.2"

[tool.poetry.dev-dependencies]
pytest = "^3.4"

